File rename and move scripts

--- a/project/index.html
+++ b/project/index.html
@@ -3,19 +3,19 @@
 	<head> 
 		<title>Canvas test</title> 
     
-    <script language="JavaScript" src="genAndGlobalFunctions.js"></script>
-    <script language="JavaScript" src="player.js"></script>
-    <script language="JavaScript" src="renderSquare.js"></script>
-    <script language="JavaScript" src="drawBG.js"></script>
-    <script language="JavaScript" src="level.js"></script>
-    <script language="JavaScript" src="keyPress.js"></script>
-    <script language="JavaScript" src="enemies.js"></script>
-    <script language="JavaScript" src="gun.js"></script>
-    <script language="JavaScript" src="gameObj.js"></script>
-    <script language="JavaScript" src="terminal.js"></script>
-    <script language="JavaScript" src="gallery.js"></script>
-    <script language="JavaScript" src="galIcon.js"></script>
-    <script language="JavaScript" src="clock.js"></script>
+    <script language="JavaScript" src="scripts/genAndGlobalFunctions.js"></script>
+    <script language="JavaScript" src="scripts/player.js"></script>
+    <script language="JavaScript" src="scripts/renderSquare.js"></script>
+    <script language="JavaScript" src="scripts/drawBG.js"></script>
+    <script language="JavaScript" src="scripts/level.js"></script>
+    <script language="JavaScript" src="scripts/keyPress.js"></script>
+    <script language="JavaScript" src="scripts/enemies.js"></script>
+    <script language="JavaScript" src="scripts/gun.js"></script>
+    <script language="JavaScript" src="scripts/gameObj.js"></script>
+    <script language="JavaScript" src="scripts/terminal.js"></script>
+    <script language="JavaScript" src="scripts/gallery.js"></script>
+    <script language="JavaScript" src="scripts/galIcon.js"></script>
+    <script language="JavaScript" src="scripts/clock.js"></script>
 
 
 
