Colors, make flamethrower work with new framerate

--- a/project/index.html
+++ b/project/index.html
@@ -20,9 +20,9 @@
         <script type="text/javascript">
                 
             //background colors
-            var outColor="#00ACC1 ";
+            var outColor="#004b54";
             var edgeColor="#00838F";
-            var innerBgColor="#004b54";
+            var innerBgColor="#00ACC1";
             
             //Global Variables
             var canvasW=1000;
