Page title update

--- a/project/index.html
+++ b/project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
     <head> 
-        <title>Canvas test</title> 
+        <title>D|MA 161A Final Project</title> 
     
         <script language="JavaScript" src="scripts/genAndGlobalFunctions.js"></script>
         <script language="JavaScript" src="scripts/player.js"></script>
